Fix Statistics section: remove duplicate IDs, update function signatures, add missing CSS

--- a/index.html
+++ b/index.html
@@ -174,17 +174,8 @@
                     </div>
                 </div>
 
-                <div id="statsContent" style="display: none;">
-                    <!-- Progress Chart -->
-
-
-                    <!-- Volume Chart -->
-
+                <div id="statsContent">
                     <!-- Exercise Sub-Tabs for All Exercises -->
-                    <div id="statsContent"></div>
-
-                    <!-- Stats Summary -->
-
                 </div>
 
                 <div id="noStatsMessage" class="empty-state">
