Add chart type toggle (line/bar) with localStorage persistence and fix loading indicator

--- a/index.html
+++ b/index.html
@@ -164,13 +164,16 @@
                 </div>
 
                 <div class="stats-controls">
-
-
                     <div class="view-toggle" role="group" aria-label="Time range selection">
                         <button class="view-btn active" data-view="10sessions" aria-label="View last 10 sessions" aria-pressed="true">Last 10 Sessions</button>
                         <button class="view-btn" data-view="30days" aria-label="View last 30 days" aria-pressed="false">30 Days</button>
                         <button class="view-btn" data-view="90days" aria-label="View last 90 days" aria-pressed="false">90 Days</button>
                         <button class="view-btn" data-view="alltime" aria-label="View all time data" aria-pressed="false">All Time</button>
+                    </div>
+
+                    <div class="view-toggle" role="group" aria-label="Chart type selection">
+                        <button class="chart-type-btn active" data-chart-type="line" aria-label="Line chart" aria-pressed="true">📈 Line</button>
+                        <button class="chart-type-btn" data-chart-type="bar" aria-label="Bar chart" aria-pressed="false">📊 Bar</button>
                     </div>
                 </div>
 
