--- a/index.html
+++ b/index.html
@@ -171,17 +171,13 @@
                     <h2 id="statistics-heading">Statistics & Progress</h2>
                 </div>
 
-                <div class="stats-controls">
-                    <div class="view-toggle" role="group" aria-label="Time range selection">
-                        <button class="view-btn active" data-view="10sessions" aria-label="View last 10 sessions" aria-pressed="true">Last 10 Sessions</button>
-                        <button class="view-btn" data-view="30days" aria-label="View last 30 days" aria-pressed="false">30 Days</button>
-                        <button class="view-btn" data-view="90days" aria-label="View last 90 days" aria-pressed="false">90 Days</button>
-                        <button class="view-btn" data-view="alltime" aria-label="View all time data" aria-pressed="false">All Time</button>
+                <!-- Exercise Selection Controls -->
+                <div id="exerciseSelection" class="comparison-controls">
+                    <div class="comparison-header">
+                        <h3>Select Exercises to View</h3>
                     </div>
-
-                    <div class="view-toggle" role="group" aria-label="Chart type selection">
-                        <button class="chart-type-btn active" data-chart-type="line" aria-label="Line chart" aria-pressed="true">📈 Line</button>
-                        <button class="chart-type-btn" data-chart-type="bar" aria-label="Bar chart" aria-pressed="false">📊 Bar</button>
+                    <div id="exerciseCheckboxes" class="comparison-checkboxes">
+                        <!-- Checkboxes will be dynamically populated -->
                     </div>
                 </div>
 
@@ -201,6 +197,8 @@
 
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.0.1/dist/chartjs-plugin-annotation.min.js"></script>
 
     <!-- Application Scripts -->
     <script type="module" src="js/app.js"></script>
