Add exercise summary table with sorting to Statistics section

--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
                     <!-- Exercise Sub-Tabs for All Exercises -->
                 </div>
 
+                <div id="statsTableContent">
+                    <!-- Table view will be rendered here -->
+                </div>
+
                 <div id="noStatsMessage" class="empty-state">
                     <p>Select an exercise to view statistics</p>
                 </div>
