--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                 <div id="exerciseSelection" class="comparison-controls">
                     <div class="comparison-header">
                         <h3>Select Exercises to View</h3>
+                        <button id="toggleAllExercises" class="btn btn-small btn-secondary">Select All</button>
                     </div>
                     <div id="exerciseCheckboxes" class="comparison-checkboxes">
                         <!-- Checkboxes will be dynamically populated -->
