--- a/index.html
+++ b/index.html
@@ -174,7 +174,9 @@
                 <!-- Exercise Selection Controls -->
                 <div id="exerciseSelection" class="comparison-controls">
                     <div class="comparison-header">
-                        <h3>Select Exercises to View</h3>
+                        <h3 id="exerciseSelectorToggle" style="cursor: pointer; user-select: none;">
+                            <span class="chevron" style="display: inline-block; transition: transform 0.3s ease;">▼</span> Select Exercises to View
+                        </h3>
                         <button id="toggleAllExercises" class="btn btn-small btn-secondary">Select All</button>
                     </div>
                     <div id="exerciseCheckboxes" class="comparison-checkboxes">
