Persist navigation and collapsible states for sections and chart in statistics

--- a/index.html
+++ b/index.html
@@ -208,8 +208,14 @@
                     </div>
                 </div>
 
-                <div id="statsContent">
-                    <!-- Exercise Sub-Tabs for All Exercises -->
+                <!-- Chart Section with Collapsible Header -->
+                <div id="chartSection" style="margin-top: 20px;">
+                    <h3 id="chartToggle" style="cursor: pointer; user-select: none; padding: 10px; background: #f5f5f5; border-radius: 4px;">
+                        <span class="chevron" style="display: inline-block; transition: transform 0.3s ease;">▼</span> Progress Chart
+                    </h3>
+                    <div id="statsContent">
+                        <!-- Exercise Sub-Tabs for All Exercises -->
+                    </div>
                 </div>
 
                 <div id="statsTableContent">
