Add last session overview feature to workout logging

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                                 <select id="workoutExercise" required aria-required="true" aria-label="Select exercise">
                                     <option value="">Select Exercise...</option>
                                 </select>
+                                <div id="lastWorkoutInfo" class="last-workout-info" style="display: none;"></div>
                             </div>
 
                             <div class="form-group">
